Criação dos .h e .c dos testes e mudança na main

--- a/Assignement01/Trabalho1/makefile
+++ b/Assignement01/Trabalho1/makefile
@@ -6,7 +6,7 @@ TARGETS = ass01
 .PHONY:	all clean cleanall
 
 all: $(TARGETS)
-ass01: main.o MyDLL.o
+ass01: main.o MyDLL.o Testes.o
 	$(CXX) -o $@ $^ $(CXXFLAGS)
 	
 main.o: main.c
@@ -14,5 +14,6 @@ main.o: main.c
 	
 MyDLL.o: MyDLL.c MyDLL.h
 	gcc -c MyDLL.c
-
 	
+Testes.o: Testes.c Testes.h
+	gcc -c Testes.c
