--- a/Assignement03/Assignement_C/CMakeLists.txt
+++ b/Assignement03/Assignement_C/CMakeLists.txt
@@ -4,17 +4,17 @@ cmake_minimum_required(VERSION 3.13.1)
 project(Assignement03)
 set(BOARD "nrf52840dk/nrf52840")
 
+# Set the NCS toolchain version
+set(NCS_TOOLCHAIN_VERSION v2.6.0)
+
 find_package(Zephyr REQUIRED HINTS $ENV{ZEPHYR_BASE})
 
 # Adicione os arquivos fonte
 target_sources(app PRIVATE
-    application/main.c
-    application/timers/timers.c
+    main.c
     src-gen/Statechart.c
-    
 )
 
 # Inclua o diretório src e src-gen no caminho de busca
-target_include_directories(app PRIVATE src src-gen build application/debug aplication/timers)
+target_include_directories(app PRIVATE src src-gen build)
 
-add_executable(ass03)
