--- a/Assignement04/prj.conf
+++ b/Assignement04/prj.conf
@@ -2,5 +2,7 @@ CONFIG_UART_CONSOLE=y
 CONFIG_PRINTK=y
 CONFIG_GPIO=y
 CONFIG_ADC=y
+CONFIG_SERIAL=y
+CONFIG_UART_ASYNC_API=y
 CONFIG_TIMING_FUNCTIONS=y
 
